...
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="sPX-cG-iig">
                                        <rect key="frame" x="0.0" y="61" width="320" height="283.5"/>
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="5" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="meV-BI-hY5">
                                                <rect key="frame" x="0.0" y="0.0" width="320" height="174.5"/>
                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" hint="Type In Your Guess" identifier="GuessTextField" label="Type In Your Guess"/>
                                                <color key="textColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="60"/>
                                                <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fFr-FO-xdn">
                                                <rect key="frame" x="0.0" y="182.5" width="320" height="101"/>
                                                <accessibility key="accessibilityConfiguration" hint="Guess" identifier="GuessButton" label="Enter Your Guess"/>
                                                <fontDescription key="fontDescription" name="SnellRoundhand-Black" family="Snell Roundhand" pointSize="70"/>
                                                <state key="normal" title="Guess">
                                                    <color key="titleColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                                    <color key="titleShadowColor" red="0.96862745100000003" green="0.83137254900000002" blue="0.090196078430000007" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <connections>
...
